# test_task

./: CMakeLists.txt  get_next.hpp  main.cpp  readme.md
